src/app/(noNavbar)/signIn/register/register.module.scss
.main {
  background: linear-gradient(0deg, rgba(255, 207, 0, 0.8), var(--primary));
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.form {
  padding-top: 5rem;
  min-height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;

  @media screen and (min-width: 960px) {
    padding-top: 6rem;
  }
  h2 {
    font-weight: 400;
  }
  .input {
    width: 100%;
    height: 2.5rem;
    padding: 0.75rem;
    border: 1px solid rgba(0, 0, 0, 0.1);
    border-radius: 5px;
    margin-bottom: 0.75rem;
    font-weight: 500;
    font-size: 0.875rem;
    background-color: var(--primary-bg);
    color: var(--primary-text);
    &:focus {
      outline: none !important;
      border-color: var(--primary);
    }
    &::placeholder {
      color: #868585;
      font-weight: 500;
    }
  }
  .select {
    border-color: var(--primary);
    margin-bottom: 0.5rem;
    font-size: 0.875rem;
    font-weight: 500;
    color: var(--primary-text);
  }

  .error {
    color: red;
    margin-bottom: 1rem;
    font-size: 0.875rem;
    padding-left: 0.5rem;
  }

  .btnContainer {
    display: flex;
    justify-content: space-between;
    height: fit-content;
    margin-bottom: 1rem;
    button {
      width: 5rem;
      color: var(--primary-text);
      background-color: transparent;
      height: 2rem;
      border: none;
      font-weight: 600;
      border-radius: 3px;
      font-size: 0.7rem;
      transition: color 0.25s linear, background-color 0.25s linear;
    }
    .active {
      background-color: var(--primary);
      color: var(--primary-bg);
    }
  }

  .help {
    font-size: 0.875rem;
    padding: 0.5rem;
    color: var(--primary);
    text-decoration: underline;
    cursor: pointer;
  }
}

.imgUpload {
  display: flex;
  flex-direction: column;
  align-items: center;

  .imgBtnContainer {
    display: inline-flex;
    align-items: center;
    justify-content: flex-start;
    width: 100%;
    gap: 1rem;
    margin-bottom: 2rem;
    label {
      border: 1px dashed rgba(0, 0, 0, 0.3);
      background-color: var(--primary-bg);
      width: 100%;
      height: 15rem;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      border-radius: 4px;
      font-weight: 600;
      font-size: 0.8rem;
      color: var(--primary-text);
    }
  }

  .cropImgContainer {
    background-color: var(--secondary-bg);
    display: flex;
    flex-direction: column;
    align-items: center;

    width: 100%;
    max-width: 20rem;

    button {
      background-color: transparent;
      border: none;
    }

    img {
      max-height: 25rem;
    }
  }
}

.imgConfirmationContainer {
  display: flex;
  margin-top: 1rem;
  gap: 1rem;
  button {
    padding: 0.5rem 0.75rem;
    border-radius: 4px;
    border: none;
    font-weight: 600;
  }

  .removeImg {
    background-color: #f44336;
    color: var(--secondary-bg);
  }
}


.imgPreview {
  height: 20rem;
  display: flex;
flex-direction: column;

justify-content: center;
}

